force-app/main/default/objects/Event__c/fields/Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Out_Time__c</fullName>
    <label>Out Time</label>
    <type>DateTime</type>
</CustomField>